fixed dark mode issue

--- a/MemoryLane_Personal/CSS Styles/DashBoard.css
+++ b/MemoryLane_Personal/CSS Styles/DashBoard.css
@@ -277,6 +277,9 @@ main {
   text-align: right;
 }
 
+.albums-container {
+  height: 100vh;
+}
 
 /* ===============================
    🌙 DARK MODE STYLES
@@ -284,6 +287,11 @@ main {
 
 body.dark-mode,
 html.dark-mode {
+  background-color: #121212;
+  color: #e0e0e0;
+}
+
+.dark-mode .main-content {
   background-color: #121212;
   color: #e0e0e0;
 }
